--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,15 @@
 <h1>Angular Datatable</h1>
-<table datatable [dtOptions]="dtOptions" class="row-border hover">
+<div>Post ID: {{postID}}</div>
+<table id="example" cellspacing="0" class="row-border hover">
   <thead>
     <tr>
-      <th>ID</th>
-      <th>Title</th>
-      <th>Body</th>
+      <th>Sr No.</th>
+      <th>Edit</th>
+      <th>Email Template</th>
+      <th>Email Subject</th>
+      <th>From Email</th>
+      <th>Type of User</th>
+      <th>Status</th>
     </tr>
   </thead>
   <tbody>
@@ -12,39 +17,379 @@
       <td>name</td>
       <td>titles</td>
       <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
     </tr>
     <tr>
       <td>name</td>
       <td>titles</td>
       <td>body</td>
-    </tr><tr>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
       <td>name</td>
       <td>titles</td>
       <td>body</td>
-    </tr><tr>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
       <td>name</td>
       <td>titles</td>
       <td>body</td>
-    </tr><tr>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
       <td>name</td>
       <td>titles</td>
       <td>body</td>
-    </tr><tr>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
       <td>name</td>
       <td>titles</td>
       <td>body</td>
-    </tr><tr>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
       <td>name</td>
       <td>titles</td>
       <td>body</td>
-    </tr><tr>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
       <td>name</td>
       <td>titles</td>
       <td>body</td>
-    </tr><tr>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
       <td>name</td>
       <td>titles</td>
       <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td>titles</td>
+      <td>body</td>
+      <td>test</td>
+      <td>example@gmail.com</td>
+      <td>patient</td>
+      <td>ACTIVE</td>
     </tr>
   </tbody>
 </table>
